--- a/Rido.HubProxy/wwwroot/index.html
+++ b/Rido.HubProxy/wwwroot/index.html
@@ -10,5 +10,9 @@
 <h1>RidoHubProxy</h1>
 <a href="/swagger">swagger</a>
 <div>latest</div>
+
+<div id="app"></div>
+
+<script src="index.js"></script>
 </body>
 </html>
