--- a/Rido.HubProxy/wwwroot/index.html
+++ b/Rido.HubProxy/wwwroot/index.html
@@ -7,6 +7,7 @@
     <title>RidoHubProxy</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
     <script src="https://unpkg.com/vue@3"></script>
+    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -16,15 +17,24 @@
 
 
     <div id="app">
-        <ul>
-            <li v-for="device in devices">
-                <h3 :style="{color: device.state === 1 ? 'green' : 'red'}">{{device.deviceId}}</h3> 
-                <div v-bind:title="device.started">Started: {{formatDate(device.started)}}</div>
-                <div>Interval: {{device.interval}}</div>
-                <button @click="getStats(device)">Stats</button>
-                <pre>{{device.stats}}</pre>
-            </li>
-        </ul>
+        <table>
+            <thead>
+                <tr>
+                    <th>Device Id</th>
+                    <th>Interval</th>
+                    <th>Started</th>
+                    <th>Inspect</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr v-for="device in devices">
+                    <td :style="{color: device.state === 1 ? 'green' : 'red'}">{{device.deviceId}}</td>
+                    <td>{{device.interval}}</td>
+                    <td>{{formatDate(device.started)}}</td>
+                    <td><a :href="'device.html?id=' + device.deviceId">detail</a></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 
     <script type="module">
