--- a/IoTUX/wwwroot/index.html
+++ b/IoTUX/wwwroot/index.html
@@ -11,12 +11,9 @@
 </head>
 <body>
 
-    <h1>IoTUX</h1>
-    <a href="/swagger">swagger</a>
-    <div>latest</div>
-
-
     <div id="app">
+        <h1>IoTUX</h1>
+        <h2>{{config}}</h2>
         <table>
             <thead>
                 <tr>
