config with AAD

--- a/IoTUX/wwwroot/index.html
+++ b/IoTUX/wwwroot/index.html
@@ -12,8 +12,8 @@
 <body>
 
     <div id="app">
-        <h1>IoTUX</h1>
-        <h2>{{config}}</h2>
+        <h1>[IoTUX] {{config}}</h1>
+        <div class="error">{{error}}</div>
         <table>
             <thead>
                 <tr>
