--- a/IoTUX/wwwroot/index.html
+++ b/IoTUX/wwwroot/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <script type="module">
-        import deviceList from './device-list.js'
+        import deviceList from './index.js'
         const { createApp } = Vue
         createApp(deviceList).mount('#app')
     </script>
