--- a/IoTUX/wwwroot/device.html
+++ b/IoTUX/wwwroot/device.html
@@ -48,8 +48,9 @@
                     <span class="prop-value">{{gv(device, 'properties.reported.interval.value')}}</span>
                     desired
                     <input size="1" :value="gv(device, 'properties.desired.interval')" type="text" id="in-interval" />
-                    <button @click="updateProp('interval')">Update</button>
+                    <button @click="updateProp('interval',parseInt)">Update</button>
                     v: {{gv(device,'properties.desired.$version')}}
+                    lu: {{gv(device,'properties.desired.$metadata.interval.$lastUpdatedVersion')}}
                     <div v-if="!propsUpdating" class="props-metadata" :style="{backgroundColor: wpSyncs['interval']}">
                         <div class="prop-md">
                             <span>last updated:</span>
@@ -75,8 +76,9 @@
                     <span class="prop-value">{{gv(device, 'properties.reported.enabled.value')}}</span>
                     desired
                     <input size="1" :value="gv(device, 'properties.desired.enabled')" type="text" id="in-enabled" />
-                    <button @click="updateProp('enabled')">Update</button>
+                    <button @click="updateProp('enabled', b => b === 'true')">Update</button>
                     v: {{gv(device,'properties.desired.$version')}}
+                    lu: {{gv(device,'properties.desired.$metadata.enabled.$lastUpdatedVersion')}}
                     <div v-if="!propsUpdating" class="props-metadata" :style="{backgroundColor: wpSyncs['enabled']}">
                         <div class="prop-md">
                             <span>last updated:</span>
