--- a/IoTUX/wwwroot/device.html
+++ b/IoTUX/wwwroot/device.html
@@ -18,6 +18,7 @@
             <span>{{formatDate(device.lastActivityTime)}}</span>
         </div>
         Model: <a href="#">{{device.modelId}}</a>
+
         <div>
             <h3>Commands</h3>
             <command command-name="getRuntimeStats" :device-id="gv(device,'deviceId')"></command>
@@ -27,76 +28,30 @@
             <h3>Device Twin</h3>
             <div class="reported">
                 <reported-property prop-name="started" :reported-node="gv(device, 'properties.reported')"></reported-property>
-            </div>
-            <div class="desired">
-                <div class="prop">
-                    <span class="prop-name">interval</span>
-                    <span class="prop-value">{{gv(device, 'properties.reported.interval.value')}}</span>
-                    desired
-                    <input size="1" :value="gv(device, 'properties.desired.interval')" type="text" id="in-interval" />
-                    <button @click="updateProp('interval',parseInt)">Update</button>
-                    v: {{gv(device,'properties.desired.$version')}}
-                    lu: {{gv(device,'properties.desired.$metadata.interval.$lastUpdatedVersion')}}
-                    <div v-if="!propsUpdating" class="props-metadata" :style="{backgroundColor: wpSyncs['interval']}">
-                        <div class="prop-md">
-                            <span>last updated:</span>
-                            <span>{{formatDate(gv(device, 'properties.reported.$metadata.interval.$lastUpdated'))}}</span>
-                        </div>
-                        <div class="prop-md">
-                            <span>version:</span>
-                            <span>{{gv(device, 'properties.reported.interval.av')}}</span>
-                        </div>
-                        <div class="prop-md">
-                            <span>status:</span>
-                            <span>{{gv(device, 'properties.reported.interval.ac')}}</span>
-                        </div>
-                        <div class="prop-md">
-                            <span>descr:</span>
-                            <span>{{gv(device, 'properties.reported.interval.ad')}}</span>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="prop">
-                    <span class="prop-name">enabled</span>
-                    <span class="prop-value">{{gv(device, 'properties.reported.enabled.value')}}</span>
-                    desired
-                    <input size="1" :value="gv(device, 'properties.desired.enabled')" type="text" id="in-enabled" />
-                    <button @click="updateProp('enabled', b => b === 'true')">Update</button>
-                    v: {{gv(device,'properties.desired.$version')}}
-                    lu: {{gv(device,'properties.desired.$metadata.enabled.$lastUpdatedVersion')}}
-                    <div v-if="!propsUpdating" class="props-metadata" :style="{backgroundColor: wpSyncs['enabled']}">
-                        <div class="prop-md">
-                            <span>last updated:</span>
-                            <span>{{formatDate(gv(device, 'properties.reported.$metadata.enabled.$lastUpdated'))}}</span>
-                        </div>
-                        <div class="prop-md">
-                            <span>version:</span>
-                            <span>{{gv(device, 'properties.reported.enabled.av')}}</span>
-                        </div>
-                        <div class="prop-md">
-                            <span>status:</span>
-                            <span>{{gv(device, 'properties.reported.enabled.ac')}}</span>
-                        </div>
-                        <div class="prop-md">
-                            <span>descr:</span>
-                            <span>{{gv(device, 'properties.reported.enabled.ad')}}</span>
-                        </div>
-                    </div>
-                </div>
+                <writable-property prop-name="interval"
+                                   :device-id="gv(device,'deviceId')"
+                                   :reported-node="gv(device, 'properties.reported')"
+                                   :desired-node="gv(device,'properties.desired')"></writable-property>
 
+                <writable-property prop-name="enabled"
+                                   :device-id="gv(device,'deviceId')"
+                                   :reported-node="gv(device, 'properties.reported')"
+                                   :desired-node="gv(device,'properties.desired')"></writable-property>
             </div>
         </div>
 
     </div>
     <script type="module">
         import device from './device.js'
-        import ReportedProperty from './ReportedProperty.js'
         import Command from './Command.js'
+        import ReportedProperty from './ReportedProperty.js'
+        import WritableProperty from './WritableProperty.js'
         const { createApp } = Vue
         const app = createApp(device)
-        app.component('ReportedProperty', ReportedProperty)
         app.component('Command', Command)
+        app.component('ReportedProperty', ReportedProperty)
+        app.component('WritableProperty', WritableProperty)
         app.mount('#app')
     </script>
 </body>
