--- a/MqttUX/wwwroot/index.html
+++ b/MqttUX/wwwroot/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div id="app">
+        <h3>{{hostname}}</h3>
         <table>
             <thead>
                 <tr>
@@ -22,7 +23,7 @@
             </thead>
             <tbody>
                 <tr v-for="d in devices">
-                    <td>{{d.deviceId}}</td>
+                    <td><a :href="'device.html?id=' + d.deviceId + '&model-id=' + d.modelId">{{d.deviceId}}</a></td>
                     <td :style="{color: d.status === 'online' ? 'green' : 'red'}">{{d.status}}</td>
                     <td>{{d.modelId}}</td>
                     <td>{{formatDate(d.when)}}</td>
