--- a/MqttUX/wwwroot/index.html
+++ b/MqttUX/wwwroot/index.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <div id="app">
-        <h3>{{hostname}}</h3>
+        <h1>[MqttUX] {{hostname}}</h1>
         <table>
             <thead>
                 <tr>
                     <td>DeviceId</td>
                     <td>Status</td>
                     <td>Model</td>
-                    <td>When</td>
+                    <td>Last Activity</td>
                 </tr>
             </thead>
             <tbody>
