--- a/MqttUX/wwwroot/index.html
+++ b/MqttUX/wwwroot/index.html
@@ -5,14 +5,14 @@
     <title>MQTT UX</title>
       <!-- /dist/vue.global.prod.js -->
       <script src="https://unpkg.com/vue@latest"></script>
-      <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
+      <script src="https://unpkg.com/mqtt/dist/mqtt.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
       <link href="style.css" rel="stylesheet" />
 </head>
 <body>
     <div id="app">
-        <h1>[MqttUX] {{hostname}}</h1>
-        <table>
+        <connection @connected="onConnected" @new-message="onNewMessage"></connection>
+        <table v-if="connected">
             <thead>
                 <tr>
                     <td>DeviceId</td>
@@ -34,8 +34,10 @@
     </div>
     <script type="module">
         import index from './index.js'
+        import Connection from './Connection.js'
         const { createApp } = Vue
         const app = createApp(index)
+        app.component('Connection', Connection)
         app.mount('#app')
     </script>
 </body>
