--- a/MqttUX/wwwroot/index.html
+++ b/MqttUX/wwwroot/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <div id="app">
-        <connection @connected="onConnected" @new-message="onNewMessage"></connection>
+        <div v-if="connected">{{hostName}} <span class="link"  @click="disconnect">disconnect</span></div>
+        <connection v-if="!connected" @config-changed="onConfigChanged"></connection>
         <table v-if="connected">
             <thead>
                 <tr>
