--- a/MqttUX/wwwroot/index.html
+++ b/MqttUX/wwwroot/index.html
@@ -5,7 +5,7 @@
     <title>MQTT UX</title>
       <!-- /dist/vue.global.prod.js -->
       <script src="https://unpkg.com/vue@latest"></script>
-      <script src="https://unpkg.com/mqtt/dist/mqtt.js"></script>
+      <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
       <link href="style.css" rel="stylesheet" />
 </head>
