--- a/MqttUX/wwwroot/index.html
+++ b/MqttUX/wwwroot/index.html
@@ -8,6 +8,7 @@
       <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
       <link href="style.css" rel="stylesheet" />
+      <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="app">
